# MagicSquare_xx

./: .cursorrules  README.md  pyproject.toml
.cursor/commands/: review-ecb.md
.cursor/skills/magic-square-tdd/: SKILL.md  reference.md
Prompting/: 01.MagicSquare_xx_STEP1_Mom_Test_Interview_prompt.md  02.MagicSquare_xx_STEP2_Harness_Engineering_prompt.md
Report/: 01.MagicSquare_ProblemDefinition_Report.md  01.MagicSquare_xx_STEP1_Mom_Test_Interview_Report.md  02.MagicSquare_xx_STEP2_Harness_Engineering_Report.md
docs/: PRD.md  RED_TODO.md
tests/: conftest.py
tests/entity/: test_d_loc_01.py
